# vss-base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
config/: config.json  defaults.json  operation.json  serial.json
include/geometry/: field_line.h  field_section.h  geometry.h  point_2d.h  vector_2d.h
include/io/: serial_message.h  serial_sender.h  tcp_receiver.h
include/operation/: operation.h
include/serial/: serial_message.h  serial_sender.h
include/system/: ball.h  robot.h  system.h
src/: main.cpp
src/geometry/: field_line.cc  field_section.cc  geometry.cc  point_2d.cc  vector_2d.cc
src/io/: serial_message.cc  serial_sender.cc  tcp_receiver.cc
src/operation/: operation.cc
src/serial/: serial_message.cc  serial_sender.cc
src/system/: ball.cc  robot.cc  system.cc
